# VirtualPlanetBuilder

./: .gitignore  CMakeLists.txt  ChangeLog  NEWS.txt  READEME.txt  TODO.txt
CMakeModules/: FindGDAL.cmake  FindLibSquish.cmake  FindNVTT.cmake  FindOSG.cmake  VpbMacroUtils.cmake
Make/: dependencies  help.sh  makedefs  makedirdefs
VisualStudio/: VirtualPlanetBuilder.dsw
applications/: CMakeLists.txt
applications/osgdem/: CMakeLists.txt  GNUmakefile  GNUmakefile.inst  osgdem.cpp  osgdem.new.cpp  osgdem.old.cpp
applications/vpbcache/: CMakeLists.txt  vpbcache.cpp
applications/vpbextrusion/: ArrayFunctor.h  CMakeLists.txt  ConvertVec.h  EdgeCollector.cpp  EdgeCollector.h  ExtrudeVisitor.cpp  ExtrudeVisitor.h  ReversePrimitiveFunctor.cpp  ReversePrimitiveFunctor.h  vpbextrusion.cpp
applications/vpbheightfieldmapping/: CMakeLists.txt  vpbheightfieldmapping.cpp
applications/vpbinfo/: CMakeLists.txt  vpbinfo.cpp
applications/vpbmaster/: CMakeLists.txt  vpbmaster.cpp
applications/vpbsizes/: CMakeLists.txt  vpbsizes.cpp
applications/vpbtest/: CMakeLists.txt  vpbtest.cpp
applications/vpbtexturecompression/: CMakeLists.txt  vpbtexturecompression.cpp
include/osgTerrain/: DataSet
include/vpb/: BlockOperation  BuildLog  BuildOperation  BuildOptions  Commandline  DataSet  DatabaseBuilder  Date  Destination  Export  ExtrudeVisitor  FileCache  FileDetails  FilePathManager  FileSystem  FileUtils  GeospatialDataset  HeightFieldMapper  MachinePool  ObjectPlacer  ProgressTracker  PropertyFile  Serializer  ShapeFilePlacer  Source  SourceData  SpatialProperties  System  Task  TaskFile  TaskManager  TextureUtils  ThreadPool  Version
src/: CMakeLists.txt
src/osgTerrain/: DataSet.cpp  GNUmakefile
src/vpb/: BuildLog.cpp  BuildOperation.cpp  BuildOptions.cpp  BuildOptionsIO.cpp  CMakeLists.txt  Commandline.cpp  DataSet.cpp  DatabaseBuilder.cpp  DatabaseBuilderIO.cpp  Date.cpp  Destination.cpp  ExtrudeVisitor.cpp  FileCache.cpp  FileDetails.cpp  FilePathManager.cpp  FileSystem.cpp  FileUtils.cpp  GNUmakefile  GeospatialDataset.cpp  HeightFieldMapper.cpp  MachinePool.cpp  ObjectPlacer.cpp  ProgressTracker.cpp  PropertyFile.cpp  ShapeFilePlacer.cpp  Source.cpp  SourceData.cpp  SpatialProperties.cpp  System.cpp  Task.cpp  TaskFile.cpp  TaskManager.cpp  TextureUtils.cpp  ThreadPool.cpp  Version.cpp
src/vpbPlugins/: CMakeLists.txt
