PROJECT(VPB_APPLICATIONS)

SET(VPBCORE_BUNDLED TRUE)

IF(NOT VPBCORE_BUNDLED)
    FIND_PACKAGE(VPBCORE)
    IF(VPBCORE_FOUND)
        INCLUDE(${VPBCORE_USE_FILE})
    ELSE(VPBCORE_FOUND)
        MESSAGE(ERROR "VPBCORE neeeded but NOT FOUND")
    ENDIF(VPBCORE_FOUND)
    SET(CMAKE_MODULE_PATH  ${PROJECT_SOURCE_DIR}/../../Macros)
ENDIF(NOT VPBCORE_BUNDLED)
SET(OPENSCENEGRAPH_APPLICATION_DIR ${PROJECT_SOURCE_DIR})


SET(TARGET_DEFAULT_PREFIX "application_")
SET(TARGET_DEFAULT_LABEL_PREFIX "Applications")
SET(TARGET_COMMON_LIBRARIES 
    vpb 
)

ADD_SUBDIRECTORY(osgdem)
ADD_SUBDIRECTORY(vpbcache)
ADD_SUBDIRECTORY(vpbsizes)
ADD_SUBDIRECTORY(vpbmaster)
