IF   (DYNAMIC_VIRTUALPLANETBUILDER)
	ADD_DEFINITIONS(-DVPB_LIBRARY)
ELSE (DYNAMIC_VIRTUALPLANETBUILDER)
	ADD_DEFINITIONS(-DVPB_LIBRARY_STATIC)
ENDIF(DYNAMIC_VIRTUALPLANETBUILDER)
SET(LIB_NAME vpb)

SET(HEADER_PATH ${VIRTUALPLANETBUILDER_SOURCE_DIR}/include/${LIB_NAME})
SET(LIB_PUBLIC_HEADERS
	${HEADER_PATH}/DataSet
	${HEADER_PATH}/Export
	${HEADER_PATH}/Version
)

ADD_LIBRARY(${LIB_NAME}
	${VIRTUALPLANETBUILDER_USER_DEFINED_DYNAMIC_OR_STATIC}
	${LIB_PUBLIC_HEADERS}
	DataSet.cpp
	Version.cpp
)

INCLUDE_DIRECTORIES( ${GDAL_INCLUDE_DIR} ${OSG_INCLUDE_DIR} )

LINK_EXTERNAL(${LIB_NAME}  ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} ${GDAL_LIBRARY})
LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGDB_LIBRARY OSGFX_LIBRARY OPENTHREADS_LIBRARY)
LINK_CORELIB_DEFAULT(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY} )

INCLUDE(ModuleInstall OPTIONAL)
